2011-09-16  Roland Levillain  <roland@lrde.epita.fr>

	* configure.ac, NEWS: Version 2.0a.

2011-09-16  Guillaume Lazzara  <z@lrde.epita.fr>

	Olena 2.0

	* NEWS: Add release date.

	* configure.ac: Change version number.

2011-09-16  Guillaume Lazzara  <z@lrde.epita.fr>

	* README: Add descriptions for Scribo.

2011-09-15  Roland Levillain  <roland@lrde.epita.fr>

	Prepare the forthcoming release.

	* AUTHORS: Update.
	* NEWS: Update.
	Aesthetic changes.
	* README: Update documentation with respect to ImageMagick and
	GraphicsMagick.

2011-09-15  Roland Levillain  <roland@lrde.epita.fr>

	* configure.ac: Fix the initialization of Magick++ flags.

2011-09-15  Guillaume Lazzara  <z@lrde.epita.fr>

	* distrib/macports/Portfile.in: Force the use of GraphicsMagick.

2011-09-15  Guillaume Lazzara  <z@lrde.epita.fr>

	* bootstrap: Fix minimum required version for convert.

2011-09-15  Guillaume Lazzara  <z@lrde.epita.fr>

	* configure.ac: Handle both GraphicsMagick and ImageMagick.

2011-09-15  Guillaume Lazzara  <z@lrde.epita.fr>

	* distrib/macports/Portfile.in: Use -fno-strict-aliasing flag for
	Mac OS X Lion.

2011-09-15  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix Portfile dependencies.

	* distrib/macports/Portfile.in: Set fop as run dependency.
	(depends_lib): Use GraphicsMagick instead of ImageMagick.

2011-09-12  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix Portfile related dependencies.

	* Makefile.am: Improve Portfile dependencies.

	* distrib/macports/Portfile.in: Add package dependencies.

2011-09-09  Guillaume Lazzara  <z@lrde.epita.fr>

	Generate a valid Portfile for MacPorts support.

	* Makefile.am: Add a rule to create a valid Portfile.

	* distrib/macports/Portfile.in: New.

2011-09-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* lrde-scmstats.sh: Do not change permissions.

2011-09-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* lrde-scmstats.sh: New.

2011-09-08  Guillaume Lazzara  <z@lrde.epita.fr>

	* AUTHORS: Update.
